# llm-writer

./: .gitignore  docker-compose.yml  pyproject.toml
.docker/: Dockerfile.crawlers
.github/workflows/: etl_pipeline.yml
etl_pipeline/: docker-compose.yml  etl_note.ipynb  main.py  pyproject.toml
etl_pipeline/crawlers/: __init__.py  github.py  linkedin.py
ind_pipelines/etl_pipeline/: config.py  dispatcher.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  test.py
ind_pipelines/etl_pipeline/crawlers/: __init__.py  base.py  crawler.ipynb  github.py  linkedin.py  medium.py
ind_pipelines/etl_pipeline/db/: documents.py
