[tool.poetry]
name = "llm-writer"
version = "0.1.0"
description = ""
authors = ["wangboyu89 <wangboyu89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.21.0"
pymongo = "^4.8.0"
pydantic = "^2.8.2"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.12.3"
structlog = "^24.4.0"
pydantic-settings = "^2.4.0"
aws-lambda-powertools = "^2.43.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
