[tool.poetry]
name = "etl-pipeline"
version = "0.1.0"
description = ""
authors = ["wangboyu89 <wangboyu89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
pymongo = "^4.6.2"
pydantic = "^2.6.4"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
